--- a/index.css
+++ b/index.css
@@ -1,10 +1,14 @@
 .General{
     text-align: center;
-    background-image: url(images/pizzageneral.jpg);
+    /* background-image: url(images/pizzageneral.jpg); */
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5),rgba(255, 255, 255, 0.5)),url(images/pizzageneral.jpg);
+}
+.All{
+    background-color: darkgray;
 }
 .Cripsy{
     text-align: center;
-
+  
 }
 .Crips{
     display: flex;
@@ -23,4 +27,27 @@
 .Stuff{
     display: flex;
     justify-content: space-around;
+}
+.Toppings{
+    text-align: center;
+}
+.Top{
+    display: flex;
+    justify-content: space-around;
+}
+.one{
+    height: 380px;
+    width: 400px;
+    background-color: wheat;
+}
+.two{
+    height: 380px;
+    width: 400px;
+    background-color: wheat;
+}
+.three{
+
+    height: 380px;
+    width: 400px;
+    background-color: wheat;
 }
