--- a/index.css
+++ b/index.css
@@ -51,3 +51,8 @@
     width: 450px;
     background-color: wheat;
 }
+.Order{
+    text-align: center;
+    background-color: darkgray;
+    margin-top: -18px;
+}
